SFDCProject/src/objects/PartnerDetail__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>PartnerAccountId__c</fullName>
        <label>PartnerAccountId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerContactEmail__c</fullName>
        <label>PartnerContactEmail</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerContactId__c</fullName>
        <label>PartnerContactId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerUserId__c</fullName>
        <label>PartnerUserId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>PartnerDetail</label>
</CustomObject>